done with challange so far.... need to fix spacing

--- a/style.css
+++ b/style.css
@@ -25,15 +25,23 @@
 
 body {
   font-family: 'Hanken Grotesk', sans-serif;
+
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
 }
 
 .wrapper {
-  min-height: 100vh;
+  display: grid;
+  max-width: 46rem;
+}
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@media (min-width: 600px) {
+  .wrapper {
+    grid-template-columns: 1fr 1fr;
+    box-shadow: 0.5rem 1rem 3rem hsl(224, 30%, 27%, 0.2);
+    border-radius: 32px;
+  }
 }
 
 .result-container {
@@ -41,22 +49,32 @@ body {
     var(--gradient-light-slate-blue),
     var(--gradient-light-royal-blue)
   );
-
+  /* 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+
+  display: grid;
+  place-items: center;
+  gap: 1rem;
 
   border-radius: 0 0 32px 32px;
 
   width: 100%;
+  padding: 2.5rem 3.75rem;
+}
+
+@media (min-height: 600px) {
+  .result-container {
+    border-radius: 32px;
+  }
 }
 
 .your-result {
   font-size: 18px;
   font-weight: bold;
   color: var(--clr-neutral-light-lavender);
-  margin-block: 24px;
 }
 
 .attribution {
@@ -83,8 +101,6 @@ body {
   height: 140px;
 
   border-radius: 100%;
-
-  margin-bottom: 24px;
 }
 
 .result-big {
@@ -101,26 +117,18 @@ body {
   font-size: 24px;
   font-weight: bold;
   color: var(--clr-neutral-white);
-
-  margin-bottom: 8px;
 }
 
 .result-info {
   width: 260px;
   text-align: center;
   color: var(--clr-neutral-light-lavender);
-
-  margin-bottom: 40px;
 }
 
 .summary-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  padding-inline: 30px;
-  width: 100%;
+  display: grid;
+  padding: 2.5rem;
+  gap: 1rem;
 }
 
 .summary-heading {
@@ -128,8 +136,6 @@ body {
   font-size: 18px;
   font-weight: bold;
   color: var(--clr-neutral-dark-gray-blue);
-
-  padding-block: 24px;
 }
 
 .summary {
@@ -139,7 +145,6 @@ body {
   width: 100%;
 
   padding: 1rem;
-  margin-bottom: 1rem;
 
   border-radius: 12px;
 }
@@ -182,9 +187,7 @@ body {
   color: var(--clr-neutral-white);
   background-color: var(--clr-neutral-dark-gray-blue);
   border-radius: 128px;
-  width: 40%;
 
-  padding: 17px 120px;
-  margin: 24px auto;
+  padding: 1rem 2rem;
   text-align: center;
 }
